[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cytodendaccessmodel"
version = "0.1.0"
description = "Executable memory scaffold and open-data tooling for the cytoskeletal-dendritic key-lock project."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = ["numpy", "pyyaml", "torch", "dandi", "pynwb"]
keywords = ["associative-memory", "dendrites", "cytoskeleton", "dandi", "neuroscience"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest"]
docs = ["sphinx", "myst-parser", "sphinx-autodoc-typehints", "furo"]
article = ["pymupdf"]
viz = ["matplotlib"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
